--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
-    "reactjs-popup": "^2.0.5",
     "sass": "^1.50.0",
+    "sweetalert2": "^11.4.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
