--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^18.0.0",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
+    "react-google-recaptcha": "^2.1.0",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
