--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "classnames": "^2.3.1",
+    "dotenv": "^16.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-facebook-login": "^4.1.1",
@@ -17,6 +18,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "sass": "^1.50.0",
+    "socket.io-client": "^4.5.0",
     "sweetalert2": "^11.4.9",
     "web-vitals": "^2.1.4"
   },
